[gd_scene load_steps=80 format=3 uid="uid://cgh0bx0ywd8gd"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_cte7x"]
[ext_resource type="PackedScene" uid="uid://cgm0rtxp764ux" path="res://Weapons/pistol/pistol.tscn" id="2_xv2d8"]
[ext_resource type="PackedScene" uid="uid://b2us8yigpf5a3" path="res://CharacterUtils/HitFlashAnimatedSprite2d.tscn" id="3_4hak0"]
[ext_resource type="Texture2D" uid="uid://c3pwfnoeai35d" path="res://Resources/2_Characters/Character_Generator/0_Premade_Characters/32x32/Premade_Character_32x32_07.png" id="3_8dmm6"]
[ext_resource type="Shader" path="res://CharacterUtils/HitFlash.gdshader" id="4_gfokj"]
[ext_resource type="PackedScene" uid="uid://dqbme1fmb8wfh" path="res://Weapons/Hand.tscn" id="5_r82k5"]
[ext_resource type="Script" path="res://Player/PlayerHealthManager.gd" id="6_5g4de"]
[ext_resource type="Texture2D" uid="uid://cxbb0ldw5brde" path="res://Resources/character_single.png" id="7_ifgia"]
[ext_resource type="PackedScene" uid="uid://umsvnyu32sng" path="res://Player/PlayerDeathParticle.tscn" id="9_he3dn"]
[ext_resource type="PackedScene" uid="uid://bbpab1rj0viwd" path="res://Player/PlayerHitbox.tscn" id="10_5tmny"]
[ext_resource type="Script" path="res://Levels/PauseHandler.gd" id="11_aqhya"]
[ext_resource type="Script" path="res://Player/ReloadBar.gd" id="12_ekd6h"]
[ext_resource type="PackedScene" uid="uid://c1beqhdh73cbk" path="res://ColorLauncher/ColorLauncher.tscn" id="14_2neij"]
[ext_resource type="AudioStream" uid="uid://cl3uot7livusg" path="res://Resources/collect_reward.wav" id="14_m8rrl"]
[ext_resource type="Script" path="res://Player/PlayerMover.gd" id="15_vjccv"]
[ext_resource type="Shader" path="res://Player/trail.gdshader" id="16_luwue"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y6jt4"]
radius = 8.0
height = 32.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qpyio"]
resource_local_to_scene = true
shader = ExtResource("4_gfokj")
shader_parameter/frame = 0
shader_parameter/outlined = false
shader_parameter/low_contrast = false
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_color2 = Color(1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmohb"]
atlas = ExtResource("3_8dmm6")
region = Rect2(576, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhy78"]
atlas = ExtResource("3_8dmm6")
region = Rect2(608, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_eixcm"]
atlas = ExtResource("3_8dmm6")
region = Rect2(640, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlu8p"]
atlas = ExtResource("3_8dmm6")
region = Rect2(672, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_olfqb"]
atlas = ExtResource("3_8dmm6")
region = Rect2(704, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyxem"]
atlas = ExtResource("3_8dmm6")
region = Rect2(736, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_40q5k"]
atlas = ExtResource("3_8dmm6")
region = Rect2(384, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_5to2v"]
atlas = ExtResource("3_8dmm6")
region = Rect2(416, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_di53s"]
atlas = ExtResource("3_8dmm6")
region = Rect2(448, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qewr6"]
atlas = ExtResource("3_8dmm6")
region = Rect2(480, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue0ux"]
atlas = ExtResource("3_8dmm6")
region = Rect2(512, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_kai63"]
atlas = ExtResource("3_8dmm6")
region = Rect2(544, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryvp2"]
atlas = ExtResource("3_8dmm6")
region = Rect2(0, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ojx4"]
atlas = ExtResource("3_8dmm6")
region = Rect2(32, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqeke"]
atlas = ExtResource("3_8dmm6")
region = Rect2(64, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_427ia"]
atlas = ExtResource("3_8dmm6")
region = Rect2(96, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbc08"]
atlas = ExtResource("3_8dmm6")
region = Rect2(128, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj12g"]
atlas = ExtResource("3_8dmm6")
region = Rect2(160, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_yovx2"]
atlas = ExtResource("3_8dmm6")
region = Rect2(192, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k8kl"]
atlas = ExtResource("3_8dmm6")
region = Rect2(224, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_khd7s"]
atlas = ExtResource("3_8dmm6")
region = Rect2(256, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_can8o"]
atlas = ExtResource("3_8dmm6")
region = Rect2(288, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mhqo"]
atlas = ExtResource("3_8dmm6")
region = Rect2(320, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_3somu"]
atlas = ExtResource("3_8dmm6")
region = Rect2(352, 74, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh0i5"]
atlas = ExtResource("3_8dmm6")
region = Rect2(576, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd7qd"]
atlas = ExtResource("3_8dmm6")
region = Rect2(608, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nq48"]
atlas = ExtResource("3_8dmm6")
region = Rect2(640, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc4qp"]
atlas = ExtResource("3_8dmm6")
region = Rect2(672, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpged"]
atlas = ExtResource("3_8dmm6")
region = Rect2(704, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5pgn"]
atlas = ExtResource("3_8dmm6")
region = Rect2(736, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmyhp"]
atlas = ExtResource("3_8dmm6")
region = Rect2(384, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qke01"]
atlas = ExtResource("3_8dmm6")
region = Rect2(416, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr2n5"]
atlas = ExtResource("3_8dmm6")
region = Rect2(448, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_w60cm"]
atlas = ExtResource("3_8dmm6")
region = Rect2(480, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_e65xb"]
atlas = ExtResource("3_8dmm6")
region = Rect2(512, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ngc8"]
atlas = ExtResource("3_8dmm6")
region = Rect2(544, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc5bu"]
atlas = ExtResource("3_8dmm6")
region = Rect2(160, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_muwu7"]
atlas = ExtResource("3_8dmm6")
region = Rect2(128, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10h2"]
atlas = ExtResource("3_8dmm6")
region = Rect2(96, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwvxc"]
atlas = ExtResource("3_8dmm6")
region = Rect2(64, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_due1e"]
atlas = ExtResource("3_8dmm6")
region = Rect2(32, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8k0"]
atlas = ExtResource("3_8dmm6")
region = Rect2(0, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfw7w"]
atlas = ExtResource("3_8dmm6")
region = Rect2(192, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_afj6p"]
atlas = ExtResource("3_8dmm6")
region = Rect2(224, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_osw0g"]
atlas = ExtResource("3_8dmm6")
region = Rect2(256, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8751x"]
atlas = ExtResource("3_8dmm6")
region = Rect2(288, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_76puy"]
atlas = ExtResource("3_8dmm6")
region = Rect2(320, 138, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7ign"]
atlas = ExtResource("3_8dmm6")
region = Rect2(352, 138, 32, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7pwn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhy78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eixcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlu8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olfqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyxem")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40q5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5to2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di53s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qewr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue0ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kai63")
}],
"loop": true,
"name": &"idle_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryvp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ojx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqeke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_427ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbc08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj12g")
}],
"loop": true,
"name": &"idle_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yovx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k8kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khd7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_can8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mhqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3somu")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh0i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd7qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nq48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc4qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpged")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5pgn")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmyhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qke01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr2n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w60cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e65xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ngc8")
}],
"loop": true,
"name": &"walk_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc5bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muwu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwvxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_due1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8k0")
}],
"loop": true,
"name": &"walk_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfw7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afj6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osw0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8751x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76puy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7ign")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="Curve2D" id="Curve2D_e7x0b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -18, 13, 0, 0, 0, 0, 17, 13)
}
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h104g"]
radius = 14.0
height = 42.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pbly2"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_winop"]
bg_color = Color(0.325441, 0.325441, 0.325441, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgcut"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_b6cnq"]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ug43w"]
_data = {
"reload": SubResource("Animation_b6cnq")
}

[sub_resource type="Curve" id="Curve_64p7i"]
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 1.0, 0, 1, Vector2(0.25, 1.25), 0.0, 0.0, 0, 0, Vector2(0.5, 1), -1.0, -1.6, 1, 1, Vector2(1, 0.2), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jajwm"]
shader = ExtResource("16_luwue")
shader_parameter/trail_color = Color(1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_sjok0"]
colors = PackedColorArray(1, 1, 1, 0.784314, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xkchy"]
gradient = SubResource("Gradient_sjok0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jqupk"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -17, 0)
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_xkchy")

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_mask = 10
script = ExtResource("1_cte7x")
gun_scene = ExtResource("2_xv2d8")

[node name="TerrainHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y6jt4")

[node name="HitFlashSprite" parent="." instance=ExtResource("3_4hak0")]
material = SubResource("ShaderMaterial_qpyio")
sprite_frames = SubResource("SpriteFrames_x7pwn")
animation = &"walk_up"
autoplay = ""
light_effects_enabled = false

[node name="GunLine" type="Path2D" parent="HitFlashSprite"]
curve = SubResource("Curve2D_e7x0b")

[node name="GunPosition" type="PathFollow2D" parent="HitFlashSprite/GunLine"]
position = Vector2(-18, 13)
loop = false

[node name="RightHand" type="Node2D" parent="HitFlashSprite"]
position = Vector2(10, 13)

[node name="LeftHand" type="Node2D" parent="HitFlashSprite"]
position = Vector2(-12, 13)

[node name="other_hand" parent="HitFlashSprite" instance=ExtResource("5_r82k5")]

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_top = -60.0
offset_right = 40.0
offset_bottom = -37.0

[node name="PlayerHealthManager" type="Node2D" parent="." node_paths=PackedStringArray("host_object", "hit_flash_sprite")]
script = ExtResource("6_5g4de")
max_health = 3
death_sprite = ExtResource("7_ifgia")
death_particle = ExtResource("9_he3dn")
host_object = NodePath("..")
hit_flash_sprite = NodePath("../HitFlashSprite")

[node name="PlayerHurtbox" parent="." instance=ExtResource("10_5tmny")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_h104g")
debug_color = Color(0.913725, 0, 0.72549, 0.419608)

[node name="PauseHandler" type="Node" parent="."]
process_mode = 3
script = ExtResource("11_aqhya")

[node name="ReloadBar" type="ProgressBar" parent="."]
visible = false
z_index = 3000
material = SubResource("CanvasItemMaterial_pbly2")
offset_left = -16.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = -29.0
theme_override_styles/background = SubResource("StyleBoxFlat_winop")
theme_override_styles/fill = SubResource("StyleBoxFlat_xgcut")
show_percentage = false
script = ExtResource("12_ekd6h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReloadBar"]
libraries = {
"": SubResource("AnimationLibrary_ug43w")
}

[node name="ColorLauncher" parent="." instance=ExtResource("14_2neij")]

[node name="CollectRewardAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_m8rrl")
volume_db = -10.0

[node name="PlayerMover" type="Node2D" parent="." node_paths=PackedStringArray("player", "sprite")]
position = Vector2(0, 20)
script = ExtResource("15_vjccv")
player = NodePath("..")
sprite = NodePath("../HitFlashSprite")
dodge_roll_speed = SubResource("Curve_64p7i")

[node name="TrailEmitter" type="GPUParticles2D" parent="PlayerMover"]
z_index = -1
material = SubResource("ShaderMaterial_jajwm")
emitting = false
process_material = SubResource("ParticleProcessMaterial_jqupk")
lifetime = 0.2

[connection signal="drop_collected" from="PlayerHurtbox" to="." method="_on_drop_collected"]
[connection signal="player_hit" from="PlayerHurtbox" to="PlayerHealthManager" method="process_hit"]
